# SuppervisedLearningProject

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  run_gui.py  run_modern_gui.py  test_gui_close.py
checkpoints/: Fits_Topic_Code_best_model.pt
data/: Daten_UTF8_Clean_encoded_part2.csv
docs/technical/: data_loader_tech.md  gui_tech.md  main_tech.md  model_loader_tech.md  modern_gui_tech.md  split_csv_tech.md  train_logreg_tech.md  train_nn_tech.md
docs/tutorials/: data_loader_einfach.md  gui_einfach.md  main_einfach.md  model_loader_einfach.md  modern_gui_einfach.md  split_csv_einfach.md  train_logreg_einfach.md  train_nn_einfach.md
docs/user_guides/: anleitung.md  gui_anleitung.md
examples/: README.md  model_loading_example.py
mein_projekt/: README.md  requirements.txt
mein_projekt/data/: Daten_UTF8_Clean_encoded.csv  Daten_UTF8_Clean_encoded_part1.csv
mein_projekt/docs/technical/: data_loader_tech.md  main_tech.md  split_csv_tech.md  train_logreg_tech.md  train_nn_tech.md
mein_projekt/docs/tutorials/: data_loader_einfach.md  main_einfach.md  split_csv_einfach.md  train_logreg_einfach.md  train_nn_einfach.md
mein_projekt/docs/user_guides/: anleitung.md  gui_anleitung.md
mein_projekt/models/: logreg_Fits_Topic_Code_model.pkl  logreg_Urgency_Code_model.pkl  nn_Fits_Topic_Code_model.pt
mein_projekt/scripts/: README.md  split_csv.py
mein_projekt/src/: data_loader.py  gui.py  main.py  train_logreg.py  train_nn.py
mein_projekt/tests/: test_main.py
models/: logreg_Fits_Topic_Code_20250422_153732_model.pkl  logreg_Fits_Topic_Code_model.pkl
scripts/: README.md  split_csv.py
src/: data_loader.py  gui.py  main.py  model_loader.py  train_logreg.py  train_nn.py
suppervisedlearningproject/: __init__.py  main.py
suppervisedlearningproject/core/: __init__.py  data_loader.py  model_loader.py
suppervisedlearningproject/icons/: __init__.py  app_icon.py
suppervisedlearningproject/models/: __init__.py  train_logreg.py  train_nn.py
suppervisedlearningproject/ui/: __init__.py  gui.py  gui_complete.py  gui_tabs.py  modern_gui.py  modern_gui_complete.py  modern_gui_tabs.py
suppervisedlearningproject/utils/: __init__.py  config.py
tests/: README.md  __init__.py  test_data_loader.py  test_gui_visualization.py  test_main.py  test_responsive_layout.py  test_visualizations.py
