[project]
name = "suppervisedlearningproject"
version = "0.1.0"
description = "Ein Projekt zur Textklassifikation mit überwachtem Lernen"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.2.0",
    "torch>=2.0.0",
    "joblib>=1.2.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "ttkthemes>=3.2.2",
    "pillow>=10.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
