[project]
name = "suppervisedlearningproject"
version = "0.1.0"
description = "Ein Projekt zur Textklassifikation mit überwachtem Lernen"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic"
]
keywords = ["machine learning", "text classification", "supervised learning"]

# Kernabhängigkeiten, die für die Grundfunktionalität benötigt werden
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.2.0",
    "joblib>=1.2.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
]

# Optionale Abhängigkeiten in Gruppen
[project.optional-dependencies]
# Für neuronale Netzwerke
nn = [
    "torch>=2.0.0",
]
# Für die Standard-GUI (Tkinter)
gui = [
    "ttkthemes>=3.2.2",
    "pillow>=10.0.0",
]
# Für die moderne GUI (PyQt5)
modern-gui = [
    "PyQt5>=5.15.0",
]
# Für Entwickler
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]
# Alle optionalen Abhängigkeiten
all = [
    "torch>=2.0.0",
    "ttkthemes>=3.2.2",
    "pillow>=10.0.0",
    "PyQt5>=5.15.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
